data/derived/sp14/progs/unify/prog2269.ml.out
Characters 47-62:
  let fixpoint (f,b) = wwhile ( let ans = f b in (ans, ans <> b) ,b);;
                                                 ^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
